CSS tweaks to circlegame.html

--- a/CircleGame/CircleGame.html
+++ b/CircleGame/CircleGame.html
@@ -4,6 +4,8 @@ layout: unity_webplayer
 
 <div class="webgl-content">
 	<div id="unityContainer" style="width: 960px; height: 600px"></div>
+	<p class="header">CircleGame</p>
+	<div class="template-wrap clear" style="position:relative">
 	<div class="footer">
 		<div class="webgl-logo"></div>
 		<div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
