--- a/Games/CircleGame.html
+++ b/Games/CircleGame.html
@@ -5,12 +5,12 @@ gameName: CircleGame
 ---
 
 <div class="webgl-content" style="bottom: 300px">
-	<p class="header">{{ layout.gameName }}</p>
+	<p class="header">{{ page.gameName }}</p>
 	<div id="unityContainer" style="width: 960px; height: 600px"></div>
 	<div class="template-wrap clear" style="position:relative">
 	<div class="footer">
 		<div class="webgl-logo"></div>
 		<div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-		<div class="title">{{ layout.gameName }}</div>
+		<div class="title">{{ page.gameName }}</div>
 	</div>
 </div>
