--- a/Games/CircleGame.html
+++ b/Games/CircleGame.html
@@ -1,16 +1,14 @@
 ---
 layout: unity_webplayer
-title: CircleGame
 gameName: CircleGame
 ---
 
 <div class="webgl-content" style="bottom: 300px">
-	<p class="header">{{ page.gameName }}</p>
+	<p style="text-align: center"><h1>{{ page.gameName }}</h1></p>
 	<div id="unityContainer" style="width: 960px; height: 600px"></div>
 	<div class="template-wrap clear" style="position:relative">
 	<div class="footer">
 		<div class="webgl-logo"></div>
 		<div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-		<div class="title">{{ page.gameName }}</div>
 	</div>
 </div>
