--- a/Games/games.html
+++ b/Games/games.html
@@ -9,6 +9,6 @@
 <br>
 <p style="text-align: center;">
     <a href="Games/CircleGame.html">
-        <img src="/assets/CircleGameTitle.gif" style="width: 600px; height: auto;">
+        <img src="/assets/img/CircleGameTitle.gif" style="width: 600px; height: auto;">
     </a>
 </p>
