can now return to site index from resume

--- a/resume.html
+++ b/resume.html
@@ -36,6 +36,9 @@ layout: null
             <a class="w3-theme-d3 w3-bar-item w3-button" id="btn-projects" href="#section-projects">
                 Projects
             </a>
+            <a class="w3-theme-d3 w3-bar-item w3-button w3-right" id="btn-return-index" href="/index.html">
+                Return to Index
+            </a>
             <a class="w3-theme-d3 w3-bar-item w3-button w3-right" id="btn-collapse-all">
                 Collapse/Expand All
             </a>
