fix typo in resume

--- a/resume.html
+++ b/resume.html
@@ -124,7 +124,7 @@ layout: null
 
         <p class="w3-center">
             <i>
-                Note: You can click on /assets/img/resume in this section to enlarge them.
+                Note: You can click on images in this section to enlarge them.
             </i>
         </p>
 
