--- a/Games/CircleGame.html
+++ b/Games/CircleGame.html
@@ -5,7 +5,7 @@ gameName: CircleGame
 
 <div class="webgl-content" style="bottom: 200px">
 	<p style="text-align: center"><h1>{{ page.gameName }}</h1></p>
-	<div id="unityContainer"></div>
+	<div id="unityContainer" style="width: 960px; height: 600px"></div>
 	<div class="template-wrap clear" style="position:relative">
 	<div class="footer">
 		<div class="webgl-logo"></div>
