--- a/Games/CircleGame.html
+++ b/Games/CircleGame.html
@@ -1,14 +1,1 @@
----
-layout: unity_webplayer
-gameName: CircleGame
----
-
-<div class="webgl-content" style="bottom: 200px">
-	<p style="text-align: center"><h1>{{ page.gameName }}</h1></p>
-	<div id="unityContainer" style="width: 960px; height: 600px"></div>
-	<div class="template-wrap clear" style="position:relative">
-	<div class="footer">
-		<div class="webgl-logo"></div>
-		<div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-	</div>
-</div>
+<iframe src="CircleGame/index.html" style="border: none; width: 1024px; height: 600px;"></iframe>
