ability to build locally, improved CircleGame page

--- a/Games/CircleGame.html
+++ b/Games/CircleGame.html
@@ -1,1 +1,21 @@
-<iframe src="CircleGame/index.html" style="border: none; width: 1024px; height: 600px;"></iframe>
+---
+layout: default
+---
+
+<h1>CircleGame</h1>
+
+<div class="unity-container">
+	<iframe class="unity-game" src="CircleGame/index.html"></iframe>
+</div>
+
+<div class="w3-margin-top">
+	<h2 class="w3-center">Instructions</h2>
+	<p>
+		Move around and run into smaller circles to consume them and grow larger.
+		Avoid being consumed by circles larger than you.
+		Consume all AI opponents to win the game.
+	</p>
+	<p>
+		Controls: WASD to move, Mouse Scroll to zoom in/out.
+	</p>
+</div>
