add gravity sandbox & update index

--- a/Games/games.html
+++ b/Games/games.html
@@ -12,3 +12,17 @@
         <img src="/assets/img/CircleGameTitle.gif" style="width: 600px; height: auto;">
     </a>
 </p>
+
+<!-- GravitySim -->
+<h2>
+    2D Gravity Sandbox
+</h2>
+<p>
+    A small 2D gravity sandbox made using Unity.
+</p>
+<br>
+<p style="text-align: center;">
+    <a href="Games/Gravity2D.html">
+        <img src="/assets/img/GravitySandboxTitle.gif" style="width: 600px; height: auto;">
+    </a>
+</p>
