--- a/Games/Gravity2D.html
+++ b/Games/Gravity2D.html
@@ -12,12 +12,13 @@ title: Larry Yao
 <div class="w3-margin-top">
 	<h2 class="w3-center">Instructions</h2>
 	<p>
-		Watch dust specks be drawn to one another by the force of gravity.
+		Watch dust specks be drawn to one another by the force of gravity. If speck collision is on,
+		they will tend to coalesce together into one entity.
 	</p>
 	<p>
 		<b>Note</b>: Graphics quality has been reduced in this web version for performance reasons.
 	</p>
 	<p>
-		Controls: Click or Tap to add dust specks, up to a maximum of 200.
+		Controls: Click or Tap to add dust specks, up to a maximum of 200. Press Spacebar to toggle speck collision.
 	</p>
 </div>
