Update links and metadata

--- a/resume.html
+++ b/resume.html
@@ -67,7 +67,7 @@ layout: null
                 <div class="w3-container w3-card">
                     <h2 class="w3-center">Links</h2>
                     <p>
-                        <a href="https://github.com/larry156">My GitHub</a>
+                        <a href="https://github.com/lyao6104">My GitHub</a>
                     </p>
                     <p>
                         Other contact information available on request.
@@ -151,13 +151,13 @@ layout: null
                     </ul>
                     <p class="w3-center w3-opacity">
                         <i>
-                            See CircleGame for yourself <a href="https://larry156.github.io/Games/CircleGame.html">here</a>.
+                            See CircleGame for yourself <a href="https://lyao6104.github.io/Games/CircleGame.html">here</a>.
                             | Right: A screenshot of gameplay. The green circle represents the player.
                         </i>
                     </p>
                     <p class="w3-center w3-opacity">
                         <i>
-                            <a href="https://github.com/larry156/CircleGame">View Project on GitHub</a>
+                            <a href="https://github.com/lyao6104/CircleGame">View Project on GitHub</a>
                         </i>
                     </p>
                 </div>
@@ -205,7 +205,7 @@ layout: null
                     </p>
                     <p class="w3-center w3-opacity">
                         <i>
-                            <a href="https://github.com/larry156/ElderScrollsTownSim">View Project on GitHub</a>
+                            <a href="https://github.com/lyao6104/ElderScrollsTownSim">View Project on GitHub</a>
                         </i>
                     </p>
                 </div>
@@ -253,7 +253,7 @@ layout: null
                     </p>
                     <p class="w3-center w3-opacity">
                         <i>
-                            <a href="https://github.com/larry156/MazeTraverse">View Project on GitHub</a>
+                            <a href="https://github.com/lyao6104/MazeTraverse">View Project on GitHub</a>
                         </i>
                     </p>
                 </div>
