Not in first year anymore

--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@ layout: null
             <div class="w3-center">
                 <h1>LARRY YAO</h1>
                 <p>
-                    Computer Science Co-op Student, Level 1
+                    Computer Science Co-op Student, Level 2
                 </p>
             </div>
         </header>
@@ -49,16 +49,13 @@ layout: null
                 <div class="w3-container w3-card">
                     <h2 class="w3-center">Basic Info</h2>
                     <p>
-                        I am a first year Computer Science Co-op student.
+                        I am a second year Computer Science Co-op student.
                     </p>
                     <p>
                         On this page, you can find descriptions of various projects I've worked on.
                     </p>
                     <p>
                         You can also find a list of my skills here.
-                    </p>
-                    <p>
-                        Note: Locations, education, & volunteering information were removed from this web copy of my resume.
                     </p>
                 </div>
             </div>
@@ -127,7 +124,7 @@ layout: null
             </i>
         </p>
 
-        <h3 class="w3-theme w3-card w3-margin w3-center"><i>CircleGame</i> - 2019 to Present</h3>
+        <h3 class="w3-theme w3-card w3-margin w3-center"><i>CircleGame</i> - 2019 to 2021</h3>
         <div class="w3-margin w3-center w3-container w3-card">
             <a class="w3-button w3-margin w3-theme view-toggle project-collapser collapser-visible">Collapse</a>
             <div class="hide-click w3-row-padding w3-margin">
@@ -182,7 +179,7 @@ layout: null
             </div>
         </div>
 
-        <h3 class="w3-theme w3-card w3-margin w3-center"><i>Elder Scrolls Town Sim</i> - 2019 to Present</h3>
+        <h3 class="w3-theme w3-card w3-margin w3-center"><i>Elder Scrolls Town Sim</i> - 2019 to 2020</h3>
         <div class="w3-margin w3-center w3-container w3-card">
             <a class="w3-button w3-margin w3-theme view-toggle project-collapser collapser-visible">Collapse</a>
             <div class="hide-click w3-row-padding w3-margin">
