Added a new game: The Starlight Rebellion

--- a/Games/game_list.html
+++ b/Games/game_list.html
@@ -49,3 +49,18 @@
         <!-- Link to page -->
     </a>
 </p>
+
+<!-- The Starlight Rebellion -->
+<h2>
+    The Starlight Rebellion
+</h2>
+<p>
+    A turn-based strategy game made for one of my university courses.
+</p>
+<!-- <br> -->
+<p style="text-align: center;">
+    <a href="Games/The Starlight Rebellion.html">
+        <img src="/assets/img/StarlightRebellionTitle.png" style="width: 600px; height: auto;">
+        <!-- Link to page -->
+    </a>
+</p>
