Add fullscreen recommendation

--- a/Games/The Starlight Rebellion.html
+++ b/Games/The Starlight Rebellion.html
@@ -12,7 +12,7 @@ title: Welcome to the Moon
 <div class="w3-margin-top">
 	<h2 class="w3-center">Instructions</h2>
 	<p>
-		A turn-based strategy game set in space.
+		A turn-based strategy game set in space. It is recommended to play the game in fullscreen.
 	</p>
 	<p>
 		Controls: WASD to pan the camera, Mouse to select and move systems and fleets.
