--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@ layout: default
 
 <h2>Latest Posts</h2>
 
+{% assign seen_posts = 0 %}
 {% for post in site.posts %}
     {% unless post.tags contains "SiteIntroduction" %}
         <!-- Necessary to limit posts shown properly due to excluding introductions -->
-        <!-- {% increment seen_posts %} -->
-        <div class="card">
+        {% assign seen_posts = seen_posts | plus: 1 %}
+        <div class="small-card">
             <h3><a href="{{ post.url }}">{{ post.postName }}</a></h2>
             {{ post.excerpt }}
             <b>{{post.date | date_to_string: "ordinal" }}</b>
         </div>
     {% endunless %}
+    {% if seen_posts >= 10 %}
+        {% break %}
+    {% endif %}
 {% endfor %}
 {% unless seen_posts > 0 %}
     <p>No blog posts found.</p>
